bem-ified the scss

--- a/app/4-transforms.html
+++ b/app/4-transforms.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a class="next-link" href="5-with-shadow.html">Weiter</a>
+    <a class="btn btn--next" href="5-with-shadow.html">Weiter</a>
     <div>
         <div class="smiley"></div>
         <div class="smiley"></div>
