--- a/app/8-no-flip.html
+++ b/app/8-no-flip.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <a class="next-link" href="9-flip.html">Weiter</a>
+    <a class="btn btn--next" href="9-flip.html">Weiter</a>
     <div class="container">
-        <div class="mover js_move">Move me</div>
+        <div class="btn btn-mover js_move">Move me</div>
     </div>
 </body>
 
