--- a/app/9-flip.html
+++ b/app/9-flip.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <div class="mover js_move">Expand</div>
+        <div class="btn btn-mover js_move">Move me</div>
     </div>
 </body>
 
