--- a/app/3-raf.html
+++ b/app/3-raf.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a class="next-link" href="4-transforms.html">Weiter</a>
+    <a class="btn btn--next" href="4-transforms.html">Weiter</a>
     <div>
         <div class="smiley"></div>
         <div class="smiley"></div>
