--- a/app/5-with-shadow.html
+++ b/app/5-with-shadow.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a class="next-link" href="6-will-change.html">Weiter</a>
+    <a class="btn btn--next" href="6-will-change.html">Weiter</a>
     <div>
         <div class="smiley"></div>
         <div class="smiley"></div>
