--- a/app/6-will-change.html
+++ b/app/6-will-change.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a class="next-link" href="7-limit-loop.html">Weiter</a>
+    <a class="btn btn--next" href="7-limit-loop.html">Weiter</a>
     <div>
         <div class="smiley"></div>
         <div class="smiley"></div>
