--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a class="next-link" href="2-no-blocking.html">Weiter</a>
+    <a class="btn btn--next" href="2-no-blocking.html">Weiter</a>
     <div>
         <div class="smiley"></div>
         <div class="smiley"></div>
