--- a/app/8-rotate.html
+++ b/app/8-rotate.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>Jank Busting</title>
-    <link rel="stylesheet" href="styles/main-6-will-change.css">
-    <script type="text/javascript" charset="UTF-8" src="scripts/main-7-limit-loop.js"></script>
+    <link rel="stylesheet" href="styles/main-8-rotate.css">
 </head>
 
 <body>
-    <a class="btn btn--next" href="8-rotate.html">Weiter</a>
-    <div>
+    <a class="btn btn--next" href="9-no-flip.html">Weiter</a>
+    <div class="container">
         <div class="smiley"></div>
         <div class="smiley"></div>
         <div class="smiley"></div>
