add animation api example

--- a/app/11-animation-api.html
+++ b/app/11-animation-api.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8">
     <title>Jank Busting</title>
     <link rel="stylesheet" href="styles/main-10-flip.css">
-    <script type="text/javascript" charset="UTF-8" src="scripts/main-10-flip.js" defer></script>
+    <script type="text/javascript" charset="UTF-8" src="scripts/main-11-animation-api.js" defer></script>
 </head>
 
 <body>
-    <a class="btn btn--next" href="11-animation-api.html">Weiter</a>
     <div class="container">
         <div class="btn btn-mover js_move">Move me</div>
     </div>
