circles don't smile

--- a/app/2-no-blocking.html
+++ b/app/2-no-blocking.html
@@ -11,66 +11,66 @@
 <body>
     <a class="btn btn--next" href="3-raf.html">Weiter</a>
     <div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
     </div>
 </body>
 
