--- a/app/8-rotate.html
+++ b/app/8-rotate.html
@@ -10,66 +10,66 @@
 <body>
     <a class="btn btn--next" href="9-no-flip.html">Weiter</a>
     <div class="container">
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
     </div>
 </body>
 
