--- a/app/4-transforms.html
+++ b/app/4-transforms.html
@@ -11,66 +11,66 @@
 <body>
     <a class="btn btn--next" href="5-with-shadow.html">Weiter</a>
     <div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
     </div>
 </body>
 
