--- a/app/index.html
+++ b/app/index.html
@@ -11,66 +11,66 @@
 <body>
     <a class="btn btn--next" href="2-no-blocking.html">Weiter</a>
     <div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
-        <div class="smiley"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
     </div>
 </body>
 
