--- a/app/3-raf.html
+++ b/app/3-raf.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html class="no-js">
+<html>
 
 <head>
     <meta charset="utf-8">
     <title>Jank Busting</title>
     <link rel="stylesheet" href="styles/main-1.css">
     <script type="text/javascript" charset="UTF-8" src="scripts/main-3-raf.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
 
 <body>
