--- a/app/8-rotate.html
+++ b/app/8-rotate.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html class="no-js">
+<html>
 
 <head>
     <meta charset="utf-8">
     <title>Jank Busting</title>
     <link rel="stylesheet" href="styles/main-8-rotate.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
 
 <body>
