--- a/app/index.html
+++ b/app/index.html
@@ -1,76 +1,22 @@
 <!doctype html>
-<html class="no-js">
+<html>
 
 <head>
     <meta charset="utf-8">
     <title>Jank Busting</title>
     <link rel="stylesheet" href="styles/main-1.css">
     <script type="text/javascript" charset="UTF-8" src="scripts/main-1.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
 
 <body>
-    <a class="btn btn--next" href="2-no-blocking.html">Weiter</a>
-    <div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="circle"></div>
+    <a class="btn btn--next" href="1-all-wrong.html">Weiter</a>
+    <div class="l-center">
+        <div>
+            <h1 class="headline">Butterweiche Animationen</h1>
+            <h2 class="author">Björn Ganslandt (@Ansimorph)</h2>
+        </div>
+        <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 428 191"><path fill="#e05a5a" d="M0 13.9c0-3.8 1.4-7 4.1-9.8C6.9 1.4 10.1 0 14 0c3.9 0 7.2 1.4 10 4.1 2.7 2.7 4.1 6 4.1 9.9 0 3.9-1.4 7.2-4.1 10-2.7 2.7-6 4.1-9.9 4.1-3.9 0-7.2-1.4-10-4.1C1.4 21.2 0 17.8 0 13.9z"></path><path d="M3.3 34.4h21.5v93.2H3.3zm162.8 20.1v73.1h-21.5V54.5h-9.2V34.4h9.2V.2h21.5v34.2h9.5v20.1h-9.5zm45.1-20.1v53.5c0 15.4 6.1 23.2 18.3 23.2 12.2 0 18.3-7.7 18.3-23.2V34.4h21.5v54c0 7.5-.9 13.9-2.8 19.3-1.8 4.8-4.9 9.2-9.3 13.1-7.3 6.3-16.5 9.5-27.8 9.5-11.2 0-20.4-3.2-27.7-9.5-4.5-3.9-7.6-8.3-9.5-13.1-1.8-4.3-2.7-10.8-2.7-19.3v-54h21.7z" fill="#444"></path><path fill="#e05a5a" d="M285.4 13.9c0-3.8 1.4-7 4.1-9.8 2.8-2.7 6-4.1 9.9-4.1 3.9 0 7.2 1.4 10 4.1 2.7 2.7 4.1 6 4.1 9.9 0 3.9-1.4 7.2-4.1 10-2.7 2.7-6 4.1-9.9 4.1s-7.2-1.4-10-4.1c-2.7-2.8-4.1-6.2-4.1-10.1z"></path><path d="M288.7 34.4h21.5v93.2h-21.5zm36.5 45.9c0-13.5 4.8-24.9 14.4-34.4 9.6-9.4 21.4-14.2 35.2-14.2 13.9 0 25.7 4.8 35.4 14.3 9.6 9.5 14.4 21.2 14.4 35 0 14-4.8 25.7-14.5 35.1-9.7 9.4-21.6 14.1-35.7 14.1-14 0-25.7-4.8-35.1-14.4-9.3-9.3-14.1-21.2-14.1-35.5zm22.1.4c0 9.3 2.5 16.7 7.5 22.1 5.1 5.5 11.8 8.2 20.2 8.2 8.4 0 15.2-2.7 20.2-8.1 5-5.4 7.6-12.7 7.6-21.7 0-9.1-2.5-16.3-7.6-21.7-5.1-5.5-11.8-8.2-20.2-8.2-8.2 0-14.9 2.7-20 8.2-5.2 5.5-7.7 12.6-7.7 21.2zm-244.7 47.1V74.3c0-15.4-6.1-23.2-18.3-23.2-12.2 0-18.3 7.8-18.3 23.2v53.5H44.5v-54c0-7.5.9-13.9 2.8-19.3 1.8-4.8 4.9-9.2 9.3-13.1 7.3-6.3 16.5-9.5 27.8-9.5 11.2 0 20.4 3.2 27.7 9.5 4.5 3.9 7.6 8.3 9.5 13.1 1.8 4.3 2.7 10.8 2.7 19.3v54h-21.7z" fill="#444"></path><path d="M417.7 175.4c0-.9.3-1.7 1-2.4s1.5-1 2.5-1 1.8.3 2.5 1 1 1.5 1 2.5-.3 1.8-1 2.5-1.5 1-2.5 1-1.8-.3-2.5-1c-.6-.8-1-1.6-1-2.6zm-138.1-29.5c0-1.1.4-2 1.2-2.8.8-.8 1.7-1.2 2.8-1.2 1.1 0 2.1.4 2.8 1.2.8.8 1.2 1.7 1.2 2.8 0 1.1-.4 2-1.2 2.8-.8.8-1.7 1.2-2.8 1.2-1.1 0-2.1-.4-2.9-1.2-.7-.7-1.1-1.6-1.1-2.8zM22.7 178.4h-6v-3.3h-.1c-1.9 2.3-4.7 3.8-7.9 3.8-5.7 0-8.2-4-8.2-9.4v-15.2h6.3v12.8c0 2.9 0 6.9 4.1 6.9 4.6 0 5.5-4.9 5.5-8v-11.8h6.3v24.2zm20.8-19c-1.9-.7-3.3-1-5.6-1-1.7 0-3.7.6-3.7 2.7 0 3.8 10.9 1.4 10.9 10.1 0 5.6-5 7.9-10.1 7.9-2.4 0-4.8-.4-7.1-1l.4-5.1c2 1 4 1.6 6.2 1.6 1.6 0 4.1-.6 4.1-2.9 0-4.7-10.9-1.5-10.9-10.2 0-5.2 4.5-7.5 9.5-7.5 3 0 4.9.5 6.9.9l-.6 4.5zm7.6-3.8c2.4-1.1 5.7-1.8 8.4-1.8 7.4 0 10.4 3 10.4 10.1v3.1c0 2.4 0 4.2.1 6 0 1.8.1 3.5.3 5.4h-5.5c-.2-1.3-.2-2.8-.3-3.6h-.1c-1.5 2.7-4.6 4.2-7.5 4.2-4.3 0-8.5-2.6-8.5-7.1 0-3.6 1.7-5.7 4.1-6.9 2.4-1.2 5.5-1.4 8.1-1.4h3.5c0-3.9-1.7-5.2-5.4-5.2-2.7 0-5.4 1-7.5 2.6l-.1-5.4zm7.4 18.7c1.9 0 3.4-.8 4.4-2.1 1-1.4 1.3-3.1 1.3-4.9h-2.7c-2.8 0-7 .5-7 4.2 0 2 1.7 2.8 4 2.8zm17.6-31h6.3v14h.1c1.7-2.3 3.9-3.6 7.2-3.6 7.4 0 10.1 5.9 10.1 12.5s-2.7 12.7-10.1 12.7c-2.7 0-5.6-.9-7.4-3.5h-.1v2.9h-6.1v-35zM88 174.1c4.1 0 5.3-4.5 5.3-7.8 0-3.2-1.1-7.7-5.2-7.7-4 0-5.6 4.3-5.6 7.7 0 3.4 1.3 7.8 5.5 7.8zm17-30.8h6.3v35H105v-35zm32.3 33.7c-2.3 1.3-4.9 1.9-8.3 1.9-8 0-12.6-4.6-12.6-12.5 0-7 3.7-12.7 11.2-12.7 9 0 11.5 6.1 11.5 14.5h-16.7c.3 3.9 3 6.1 6.9 6.1 3.1 0 5.7-1.1 8-2.4v5.1zm-4.2-13c-.2-3-1.6-5.6-5.1-5.6-3.5 0-5.3 2.4-5.6 5.6h10.7zm41.3 13c-2.3 1.3-4.9 1.9-8.3 1.9-8 0-12.6-4.6-12.6-12.5 0-7 3.7-12.7 11.2-12.7 9 0 11.5 6.1 11.5 14.5h-16.7c.3 3.9 3 6.1 6.9 6.1 3 0 5.7-1.1 8-2.4v5.1zm-4.2-13c-.2-3-1.6-5.6-5.1-5.6-3.5 0-5.3 2.4-5.6 5.6h10.7zm9-9.7h7.4l4.7 7.8 4.6-7.8h6.7l-7.2 11.4 8.2 12.6h-7.5l-5.4-9-5.4 9h-6.9l8.3-12.6-7.5-11.4zm28.1 0h6v3.4h.1c1.4-2.3 3.8-4 7.5-4 7.4 0 10.1 5.9 10.1 12.5s-2.7 12.7-10.3 12.7c-2.7 0-4.9-.7-7.1-3.3h-.1v12.6h-6.3v-33.9zm6.4 12c0 3.4 1.4 7.8 5.5 7.8s5.3-4.5 5.3-7.8c0-3.2-1.1-7.7-5.2-7.7-4 0-5.6 4.3-5.6 7.7zm41.6 10.7c-2.3 1.3-4.9 1.9-8.3 1.9-8 0-12.6-4.6-12.6-12.5 0-7 3.7-12.7 11.2-12.7 9 0 11.5 6.1 11.5 14.5h-16.7c.3 3.9 3 6.1 6.9 6.1 3.1 0 5.7-1.1 8-2.4v5.1zm-4.2-13c-.2-3-1.6-5.6-5.1-5.6-3.5 0-5.3 2.4-5.6 5.6h10.7zm11.1-9.7h5.6v5.5h.1c.3-2.2 2.9-6 6.6-6 .6 0 1.3 0 1.9.2v6.3c-.6-.3-1.7-.5-2.8-.5-5.1 0-5.1 6.4-5.1 9.8v8.8h-6.3v-24.1zm18.3 0h6.3v24h-6.3zm32.3 22.7c-2.3 1.3-4.9 1.9-8.3 1.9-8 0-12.6-4.6-12.6-12.5 0-7 3.7-12.7 11.2-12.7 9 0 11.5 6.1 11.5 14.5h-16.7c.3 3.9 3 6.1 6.9 6.1 3 0 5.7-1.1 8-2.4v5.1zm-4.2-13c-.2-3-1.6-5.6-5.1-5.6-3.5 0-5.3 2.4-5.6 5.6h10.7zm10.9-9.7h6v3.3h.1c2-2.8 4.7-3.8 7.9-3.8 5.7 0 8.2 4 8.2 9.4v15.2h-6.3v-12.8c0-2.9 0-6.9-4.1-6.9-4.6 0-5.5 4.9-5.5 8v11.8h-6.3v-24.2zm44.4 5.2c-1.1-.5-2.3-.9-4.3-.9-3.9 0-6.4 3.1-6.4 7.6 0 4.4 2.1 7.8 6.5 7.8 1.8 0 3.8-.6 4.8-1.1l.3 5.2c-1.8.6-3.7.8-6.3.8-7.9 0-11.9-5.4-11.9-12.7 0-7 4.1-12.5 11.7-12.5 2.5 0 4.4.3 6.1.8l-.5 5zm24.5 17.5c-2.3 1.3-4.9 1.9-8.3 1.9-8 0-12.6-4.6-12.6-12.5 0-7 3.7-12.7 11.2-12.7 9 0 11.5 6.1 11.5 14.5h-16.7c.3 3.9 3 6.1 6.9 6.1 3.1 0 5.7-1.1 8-2.4v5.1zm-4.2-13c-.2-3-1.6-5.6-5.1-5.6-3.5 0-5.3 2.4-5.6 5.6h10.7zm25.3-4.6c-1.9-.7-3.3-1-5.6-1-1.7 0-3.7.6-3.7 2.7 0 3.8 10.9 1.4 10.9 10.1 0 5.6-5 7.9-10.1 7.9-2.4 0-4.8-.4-7.1-1l.4-5.1c2 1 4 1.6 6.2 1.6 1.6 0 4.1-.6 4.1-2.9 0-4.7-10.9-1.5-10.9-10.2 0-5.2 4.6-7.5 9.5-7.5 3 0 4.9.5 6.9.9l-.6 4.5z" fill="#e05a5a"></path></svg>
     </div>
 </body>
 
