--- a/app/6-will-change.html
+++ b/app/6-will-change.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a class="btn btn--next" href="7-limit-loop.html">Weiter</a>
+    <a class="btn btn--next" href="7-rotate.html">Weiter</a>
     <div>
         <div class="circle"></div>
         <div class="circle"></div>
