--- a/app/7-rotate.html
+++ b/app/7-rotate.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>Jank Busting</title>
-    <link rel="stylesheet" href="styles/main-6-will-change.css">
-    <script type="text/javascript" charset="UTF-8" src="scripts/main-7-limit-loop.js"></script>
+    <link rel="stylesheet" href="styles/main-8-rotate.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
 
 <body>
-    <a class="btn btn--next" href="8-rotate.html">Weiter</a>
-    <div>
+    <div class="container">
         <div class="circle"></div>
         <div class="circle"></div>
         <div class="circle"></div>
